# client-server

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: macos.yml  ubuntu.yml
app/client/: CMakeLists.txt  client_tcp.cpp  client_udp.cpp
app/server/: CMakeLists.txt  server_tcp.cpp  server_udp.cpp
